--- a/src/js/component/Experiencia_y_Formacion/Experiencia_y_Formacion.css
+++ b/src/js/component/Experiencia_y_Formacion/Experiencia_y_Formacion.css
@@ -11,6 +11,7 @@
   margin-top: 30px;
   font-size: 50px;
   color: rgb(1, 32, 84);
+  text-shadow: 4px 4px 6px;
 }
 .formacion_data {
   margin-top: 20px;
