--- a/src/js/component/Skills/Skills.css
+++ b/src/js/component/Skills/Skills.css
@@ -3,6 +3,7 @@
   margin-top: 30px;
   font-size: 50px;
   color: rgb(1, 32, 84);
+  text-shadow: 4px 4px 6px;
 }
 .h6_info {
   text-align: center;
