--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,25 +1,26 @@
 body {
-  background-image: linear-gradient(
-    135deg,
-    rgb(1, 32, 84),
-    rgb(233, 26, 219),
-    rgb(0, 252, 243),
-    rgb(34, 182, 235)
-  );
+  background-image: linear-gradient(135deg,
+      rgb(1, 32, 84),
+      rgb(233, 26, 219),
+      rgb(0, 252, 243),
+      rgb(34, 182, 235));
   background-size: 500%;
   animation: fondo-anim 20s infinite alternate;
 
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 @keyframes fondo-anim {
   0% {
     background-position: left;
   }
+
   100% {
     background-position: right;
   }
 }
+
 * {
   box-sizing: border-box;
 }
@@ -38,80 +39,104 @@ body {
 }
 
 @media only screen and (min-width: 550px) {
+
   /* For tablets: */
   .col-s-1 {
     width: 8.33%;
   }
+
   .col-s-2 {
     width: 16.66%;
   }
+
   .col-s-3 {
     width: 25%;
   }
+
   .col-s-4 {
     width: 33.33%;
   }
+
   .col-s-5 {
     width: 41.66%;
   }
+
   .col-s-6 {
     width: 50%;
   }
+
   .col-s-7 {
     width: 58.33%;
   }
+
   .col-s-8 {
     width: 66.66%;
   }
+
   .col-s-9 {
     width: 75%;
   }
+
   .col-s-10 {
     width: 83.33%;
   }
+
   .col-s-11 {
     width: 91.66%;
   }
+
   .col-s-12 {
     width: 100%;
   }
 }
 
 @media only screen and (min-width: 768px) {
+
   /* For desktop: */
   .col-1 {
     width: 8.33%;
   }
+
   .col-2 {
     width: 16.66%;
   }
+
   .col-3 {
     width: 25%;
   }
+
   .col-4 {
     width: 33.33%;
   }
+
   .col-5 {
     width: 41.66%;
   }
+
   .col-6 {
     width: 50%;
   }
+
   .col-7 {
     width: 58.33%;
   }
+
   .col-8 {
     width: 66.66%;
   }
+
   .col-9 {
     width: 75%;
   }
+
   .col-10 {
     width: 83.33%;
   }
+
   .col-11 {
     width: 91.66%;
   }
+
   .col-12 {
     width: 100%;
   }
@@ -119,24 +144,30 @@ body {
 
 .section001 {
   margin-bottom: 100px;
-  
+
 }
+
 .section002 {
-  margin-bottom:200px;
-}
-.section003 {
-  margin-bottom:200px;
-}
-.section004 {
   margin-bottom: 200px;
 }
+
+.section003 {
+  margin-bottom: 100px;
+}
+
+.section004 {
+  margin-bottom: 50px;
+}
+
 .section005 {
-  margin-bottom:200px;
+  margin-bottom: 50px;
   /* font-size: 15px; */
 }
+
 .section006 {
   margin-bottom: 10px;
 }
+
 
 /* 
 AZUL OSCURO rgb(1, 32, 84)
