--- a/src/js/component/About/About.css
+++ b/src/js/component/About/About.css
@@ -1,10 +1,6 @@
-.container_about {
-  display: flex;
-}
-
 .title_h2 {
   text-align: center;
-  margin-left: 200px;
+
   margin-top: 50px;
   font-size: 60px;
   color: rgb(1, 32, 84);
@@ -18,10 +14,13 @@
 }
 
 .div_info {
+
+  align-items: center;
+
   text-align: center;
-  width: 600px;
   height: auto;
-  margin-left: 150px;
+  margin: 0 auto;
+
 }
 
 .emoji {
