--- a/src/js/component/Skills/Skills.css
+++ b/src/js/component/Skills/Skills.css
@@ -9,10 +9,11 @@
   text-align: center;
   font-size: 20px;
 }
-.iconsSkills {
+.iconsSkills{
 
-  margin-left: 30px;
-  
+  width: 70px;
+  height: 70px;
+ 
 }
 
 .Skills {
