--- a/src/js/component/Contact/Contact.css
+++ b/src/js/component/Contact/Contact.css
@@ -14,15 +14,19 @@
 
 
 .form-group {
-  margin-top: 15px;
+  margin-top: 10px;
+  width: 400px;
   
 }
 
-
 .btn {
-  margin-top: 20px;
+  
   background-color: rgb(1, 32, 84);
   color: white;
+}
+#button_enviar{
+
+  text-align: center;
 }
 .modal {
   color: black;
