--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,15 +1,12 @@
 body {
-  background-image: linear-gradient(135deg,
-      rgb(1, 32, 84),
-      rgb(233, 26, 219),
-      rgb(3, 208, 201),
-      rgb(34, 182, 235));
-  background-size: 500%;
-  animation: fondo-anim 20s infinite alternate;
+  background-image: url("../img/fondo.png");
+  background-attachment: fixed;
+background-size: cover;
 
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  
 }
+
+
 
 @keyframes fondo-anim {
   0% {
@@ -145,10 +142,12 @@ body {
 .section001 {
   margin-bottom: 100px;
 
+
 }
 
 .section002 {
   margin-bottom: 200px;
+
 }
 
 .section003 {
@@ -181,13 +180,3 @@ body {
     font-size: 30px;
   }
 }
-
-/* 
-AZUL OSCURO rgb(1, 32, 84)
-AGUAMARINA  rgb(0, 184, 200)
-AZUL KLEIN rgb(0, 40, 129)
-AZUL MEDIO rgb(1, 69, 193)
-AZUL CLARO rgb(34, 182, 235)
-
-
- */
