--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,7 +12,7 @@ body {
   body {
     background-image: url("../img/fondo.png");
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: contain;
 
   }
 }
