--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,9 +10,9 @@ body {
 @media only screen and (max-width: 600px) {
 
   body {
-    background-image: url("../img/fondo.png");
+    background-image: url("../img/fondo2.png");
     background-attachment: fixed;
-    background-repeat: contain;
+
 
   }
 }
