--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,15 +11,11 @@ body {
 
   body {
     background-image: url("../img/fondo2.png");
+
+    background-repeat: no-repeat;
     background-attachment: fixed;
 
-
   }
-}
-
-/* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
