--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,7 +13,7 @@ body {
     background-image: url("../img/fondo2.png");
 
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: cover;
 
   }
 }
