--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,7 +12,7 @@ body {
   body {
     background-image: url("../img/fondo2.png");
 
-    background-repeat: round space;
+    background-repeat: round;
     background-attachment: cover;
 
   }
