responsive columnas movil

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -18,6 +18,11 @@ body {
   }
 }
 
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
 @media only screen and (min-width: 768px) {
 
   /* For tablets: */
