--- a/src/js/component/Proyects/Proyects.css
+++ b/src/js/component/Proyects/Proyects.css
@@ -1,32 +1,29 @@
-.card {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5rem;
- 
-  color: black;
-}
-img {
-  width: 100%;
-}
-
-.btn {
-  margin-left: 25px;
-}
-
-.proyects {
-  margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap; /*cuando no hay mas hueco en la linea, salta ala siguiente fila */
-  justify-content: center;
-  align-items: center;
-}
 .title_h2_proyectos {
   text-align: center;
-  margin-top: 30px;
+  margin: 30px 40px;
   font-size: 50px;
   color: rgb(1, 32, 84);
   text-shadow: 4px 4px 6px;
+}
+
+
+.card {
+  border-radius: 10%;
+}
+
+.card-img-top {
+
+  margin: auto;
+  display: block;
+  margin-top: 10px;
+  width:500px;
+  height: 250px;
+}
+
+.btn {
+
+  font-size: 25px;
+  border-radius: 50%;
+  align-items: center;
+  margin-right: 20px;
 }
