--- a/src/js/component/Proyects/Proyects.css
+++ b/src/js/component/Proyects/Proyects.css
@@ -12,12 +12,12 @@
 }
 
 .card-img-top {
-
+  max-width: 480px;
   margin: auto;
   display: block;
   margin-top: 10px;
-  width:500px;
-  height: 250px;
+  
+  
 }
 
 .btn {
