--- a/src/js/component/Proyects/Proyects.css
+++ b/src/js/component/Proyects/Proyects.css
@@ -15,7 +15,7 @@
   display: block;
   margin-top: 10px;
 }
-.btn {
+.btn-outline-info {
   font-size: 25px;
   border-radius: 50%;
   align-items: center;
