--- a/src/js/component/About/About.css
+++ b/src/js/component/About/About.css
@@ -1,26 +1,17 @@
 .title_h2 {
   text-align: center;
-
-  margin-top: 50px;
+  margin: 20px 20px;
   font-size: 60px;
   color: rgb(1, 32, 84);
   text-shadow: 4px 4px 6px;
 }
 
-.info1 {
-
-  font-size: 30px;
-
-}
-
 .div_info {
 
   align-items: center;
-
   text-align: center;
   height: auto;
   margin: 0 auto;
-
 }
 
 .emoji {
@@ -28,7 +19,6 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-
   margin-left: 200px;
   margin-top: 80px;
 }
